Closed
Bug 46225
Opened 26 years ago
Closed 24 years ago
Mozilla ignores the HTTP mimetype of stylesheets.
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Core
CSS Parsing and Computation
Tracking
()
VERIFIED
FIXED
mozilla0.9.7
People
(Reporter: ian, Assigned: bzbarsky)
Details
(Keywords: testcase, Whiteboard: [Hixie-P4] [nsbeta3-])
Attachments
(4 files, 2 obsolete files)
|
52 bytes,
text/html
|
Details | |
|
414 bytes,
text/html
|
Details | |
|
1.48 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
|
6.74 KB,
patch
|
Details | Diff | Splinter Review |
STEPS TO REPRODUCE:
Open the attachement.
ACTUAL RESULTS:
Stylesheet, which is of type text/html, is treated as text/css.
EXPECTED RESULTS:
Stylesheet should be ignored as we do not support text/html stylesheets.
| Reporter | ||
Comment 1•26 years ago
|
||
| Reporter | ||
Comment 2•26 years ago
|
||
| Reporter | ||
Comment 3•26 years ago
|
||
TESTED ON:
Mozilla 2000072120 Windows 2000
Commericial 2000072120 Windows 2000
This is a violation of the HTTP spec. (The 'type' attribute in HTML is only
advisory, not authorative.) Nominating for nsbeta3.
Assignee: py8ieh=bugzilla → pierre
I think this is the same as bug 18817, which was marked fixed in May.
| Reporter | ||
Comment 6•25 years ago
|
||
Taking QA per managerial policy.
QA Contact: chrisd → py8ieh=bugzilla
| Reporter | ||
Updated•25 years ago
|
Whiteboard: [nsbeta3-] → [Hixie-P4] [nsbeta3-]
| Assignee | ||
Comment 7•24 years ago
|
||
| Assignee | ||
Comment 8•24 years ago
|
||
| Assignee | ||
Comment 9•24 years ago
|
||
Taking this....
Comment on attachment 58234 [details] [diff] [review]
Same patch as diff -uw for readability
r=dbaron
Attachment #58234 -
Flags: review+
Comment 11•24 years ago
|
||
dbaron: Nav4 and IE ignore the mimetype. I think that we should check it in
strict mode only as you recommended in bug 18817 comment #4.
The fix for bug 18817 is at http://lxr.mozilla.org/seamonkey/source/content/html/
document/src/nsHTMLContentSink.cpp#4436
Comment 12•24 years ago
|
||
Comment on attachment 58234 [details] [diff] [review]
Same patch as diff -uw for readability
sr=attinasi | minor question though: does the case of "text/css" matter here?
Attachment #58234 -
Flags: superreview+
| Assignee | ||
Comment 13•24 years ago
|
||
Attachment #58233 -
Attachment is obsolete: true
Attachment #58234 -
Attachment is obsolete: true
| Assignee | ||
Comment 14•24 years ago
|
||
Comment on attachment 58385 [details] [diff] [review]
diff -uw of patch that only does this in strict mode and is case-insensitive
r=dbaron
Attachment #58385 -
Flags: review+
| Assignee | ||
Comment 16•24 years ago
|
||
attachment 58387 [details] [diff] [review] checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•