Check the mimetype on the stylesheet channel and only load the sheet if the type is text/css (strict mode change only). bug 46225, r=dbaron, sr=attinasi